# obsidian-diary-mcp

./: .env.example  .gitignore  CLAUDE_CONFIG.md  QUICKSTART.md  README.md  copilot-cli-config.json  demo.py  memory_log.html  pyproject.toml  start-server.sh
.github/instructions/: all.instructions.md  python.instructions.md
src/obsidian_diary_mcp/: __init__.py  analysis.py  config.py  entry_manager.py  logger.py  memory_trace.py  ollama_client.py  server.py  template_generator.py
